--- a/package.json
+++ b/package.json
@@ -5,25 +5,15 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack",
-    "watch": "webpack --watch",
-    "update-github": "git subtree push --prefix dist origin gh-pages"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jake",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.7",
-    "@babel/preset-env": "^7.23.7",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.8.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
-    "prettier": "3.1.1",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "prettier": "3.1.1"
   }
 }
